added crud blog and author

--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Position/Create.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Position/Create.cshtml
@@ -2,9 +2,8 @@
 @{
     ViewData["Title"] = "Create";
 }
-
 <div class="container my-5">
-    <form class="forms-sample" asp-action="Create" method="post" enctype="multipart/form-data">
+    <form class="forms-sample" asp-action="Create" method="post">
         <div class="form-group">
             <label style="padding-left:6px;" for="formFile" class="form-label my-2">Add Name</label>
             <input class="form-control" id="customFile" asp-for="Name" />
