--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -193,9 +193,19 @@
                                     <div data-i18n="Error">Social</div>
                                 </a>
                             </li>
-                                  <li class="menu-item">
+                            <li class="menu-item">
                                 <a asp-area="Admin" asp-controller="Headerbackground" asp-action="Index" class="menu-link">
                                     <div data-i18n="Error">Headerbackground</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Author" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Author</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Blog" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">Blog</div>
                                 </a>
                             </li>
                         </ul>
