blog crud is ready

--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Blog/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Blog/Detail.cshtml
@@ -32,7 +32,7 @@
                 <td class="py-1" style="text-align: center;">
                     @Model.Author.Name
                 </td>
-                <td class="py-1" style="text-align: center;">
+                <td class="py-1" style="text-align: center;width: 38%;">
                     @Model.Description
                 </td>
             </tr>
