--- a/BrideyApp/BrideyApp/Views/Home/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Home/Index.cshtml
@@ -462,7 +462,7 @@
                                         </div>
                                         <div class="blog-date">
                                             <span class="created">
-                                                @blog.CreatedDate
+                                                @blog.CreatedDate.ToString("dd MMMMM yyyy")
                                             </span>
                                         </div>
                                         <div class="blog-meta">
