--- a/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
+++ b/BrideyApp/BrideyApp/wwwroot/assets/scss/style.css
@@ -651,15 +651,17 @@ hr {
   padding-left: 20px;
 }
 #blogs .blog {
-  position: relative;
-  width: 420px;
-  height: 384px;
-  border: 1px solid #dfd7d7;
+    position: relative;
+    width: 420px;
+    height: 329px;
+    border-radius: 10px;
+    border: 1px solid #dfd7d7;
 }
-#blogs .blog img {
-  width: 100%;
-  height: 100%;
-}
+    #blogs .blog img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+    }
 #blogs .blog .blogg {
   color: #e9ac98;
   text-transform: uppercase;
@@ -683,12 +685,12 @@ hr {
   position: absolute;
   top: 46%;
 }
-#blogs .blog .blog-title h4 {
-  font-weight: bolder;
-  position: relative;
-  top: 66px;
-  color: #000;
-}
+    #blogs .blog .blog-title h4 {
+        font-weight: bolder;
+        position: relative;
+        top: 53px;
+        color: #000000b0;
+    }
 #blogs .blog .read-more a {
   text-decoration: none;
   color: #e9ac98;
@@ -712,10 +714,13 @@ hr {
   width: 100%;
   height: 100%;
 }
-#blogs .blog:hover .blog-img {
-  opacity: 1;
-  height: 384px;
-}
+    #blogs .blog:hover .blog-img {
+        opacity: 1;
+        height: 329px;
+    }
+    #blogs .blog:hover {
+   border:none;
+    }
 #blogs .blog:hover .blogg {
   color: white;
 }
