added new cruds

--- a/BrideyApp/BrideyApp/Areas/Admin/Views/AboutBanner/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/AboutBanner/Detail.cshtml
@@ -22,12 +22,11 @@
         </thead>
         <tbody>
             <tr>
-
-                <td class="py-1" style="text-align: center;">
+                <td class="py-1" style="text-align: center;width: 298px;">
                     <img src="~/assets/images/@Model.SmallImage" style="width: 94%;height:200px" />
                 </td>
                 <td class="py-1" style="padding: 0px;text-align: center;">
-                    <img src="~/assets/images/@Model.LargeImage" style="width: 94%;height:200px" />
+                    <img src="~/assets/images/@Model.LargeImage" style="width: 83%;height:200px" />
                 </td>
                 <td class="py-1">
                     @Model.Title
