--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -208,6 +208,16 @@
                                     <div data-i18n="Error">Blog</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="SectionBackgroundImage" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">SectionBackgroundImage</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="AboutBox" asp-action="Index" class="menu-link">
+                                    <div data-i18n="Error">AboutBox</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
