--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ShopVM
+@{
     ViewData["Title"] = "Shop";
 }
 @section Styles {
@@ -7,7 +8,7 @@
 }
 <!-- Start Main -->
 <main>
-    <section id="wrapper-shop" style="background-image: url('/assets/images/bg-breadcrumb.jpg');">
+    <section id="wrapper-shop" style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]');">
         <div class="container page_text">
             <h1>Shop</h1>
             <ul>
