added new cruds

--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -124,10 +124,7 @@
                                         <span>No white</span>
                                     </a>
                                 </li>
-
                             </ul>
-
-
                         </div>
                         <div class="product-area">
                             <div class="price-title">
@@ -397,30 +394,9 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-12 col-12 col-md-3">
                     <div class="service-item">
-                        <img src="~/assets/images/service-1.png">
-                        <span class="title">Free Shipping </span>
-                        <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-12 col-md-3">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-2.png">
-                        <span class="title">Free Shipping </span>
-                        <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-12 col-md-3">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-3.png">
-                        <span class="title">Custom Sizing</span>
-                        <p>Order your dress with free custom sizing.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-12 col-md-3">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-4.png">
-                        <span class="title">Superb Quality</span>
-                        <p>We make commitments that the quality of our products will and always will be superb.</p>
+                        <div class="service-item">
+                            <img src="./assets/images/brand5.png">
+                        </div>
                     </div>
                 </div>
             </div>
