--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Detail.cshtml
@@ -4,20 +4,23 @@
 }
 
 <div class="container my-5">
-    <div class="images">
-        <h4>Images</h4>
-        @foreach (var productImage in Model.Images)
-        {
-            <img src="~/assets/images/@productImage.Image" style="width:150px;height:100px" alt="image" />
-        }
+    <div class="d-flex">
+        <div class="images" style="text-align:center">
+            <h4>Images</h4>
+            @foreach (var productImage in Model.Images)
+            {
+                <img src="~/assets/images/@productImage.Image" style="width:200px;height:200px" alt="image" />
+            }
+        </div>
+        <div class="images" style="text-align:center">
+            <h4>Video</h4>
+            <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
+                   poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
+                   src="@Model.Video"
+                   type="video/mp4" style="width:200px;height:200px"></video>
+        </div>
     </div>
-    <div class="images">
-        <h4>Video</h4>
-        <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
-        poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
-        src="@Model.Video"
-        type="video/mp4"></video>
-    </div>
+ 
     <div class="form-group">
         <label class="my-2">Name</label>
         <input class="form-control" disabled id="customFile" asp-for="Name" />
@@ -25,10 +28,10 @@
     <div class="form-group">
         <label class="my-2">Rate</label>
         <div class="rating-box">
-            <ul style="display:flex;">
+            <ul style="display:flex;list-style:none;padding:0px">
                 @for (int i = 0; i < Model.Rate; i++)
                 {
-                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star" style="color: #ffe24d;"></i></li>
                 }
                 @for (int i = 0; i < 5 - Model.Rate; i++)
                 {
