--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -36,7 +36,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="~/admin/vendor/fonts/boxicons.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
@@ -248,8 +250,8 @@
                                     <div data-i18n="Error">Sale</div>
                                 </a>
                             </li>
-                               <li class="menu-item">
-                             <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="menu-link">
+                            <li class="menu-item">
+                                <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="menu-link">
                                     <div data-i18n="Error">Product</div>
                                 </a>
                             </li>
